- aggregate integer variable to not in clique variable in cliquePresolve() of xor constraints to avoid infeasible solutions
- fixed memory leak in dynamic partition search primal heuristic
- fixed issue with file existence check in XML parser when SCIP was build with ZLIB support on Windows
- fixed thread-safety issue when using CppAD and user-defined expression handler

Miscellaneous
-------------

- removed 4th number in SCIP version; the new format is major.minor.patch
- changed sassy to the version included in Dejavu
- updated ampl/mp to v4.0.3
- the CIP reader now sets an objective offset instead of adding a variable fixed to the objective offset
- the solchecker tool has been extended for rational values
- SCIPclassifyConstraintTypesLinear() classify a varbound only when a binary variable is present
- the internal limit `MAXGENNUMERATOR` has been increased to allow more generators of symmetry groups, especially for problems with many variables

@page RN9 Release notes for SCIP 9

@section RN924 SCIP 9.2.4
*************************

Fixed bugs
----------

- fixed bugs with counting changes in presolving of nonlinear and setppc constraints, which resulted in negative values
- cut off dead end node to correctly track dual bound update during solving
- no longer construct and flush the LP in SCIPwriteLP() and SCIPwriteMIP() to avoid unexpected side effects
- apply multi-aggregations before detecting redundancy in propagation of varbound constraints to keep bound implications
- skip bound changes when cutting off a branch-and-bound subtree
- correct detection of doublelex matrices and their handling via orbitope constraints
- skip attempting to free transformed problem if SCIPtransformProb() failed with an error in SCIPpresolve(), since freeing
  the transformed problem is likely to fail as well
- fixed memory leak in primal heuristic "scheduler" when there is a restart